--- a/src/app/clientoverdue/clientoverdue.page.html
+++ b/src/app/clientoverdue/clientoverdue.page.html
@@ -19,7 +19,7 @@
       <ion-grid *ngSwitchCase="'ClientJobsOverdue'">
         <ion-item-divider *ngIf="job?.length != 0">
           <h5 style="color: black;">
-            Pending Available Jobs
+            Pending Available Errands
           </h5>
         </ion-item-divider>
         <ion-item-group>
