--- a/src/app/clientjobs/clientjobs.page.html
+++ b/src/app/clientjobs/clientjobs.page.html
@@ -120,7 +120,7 @@
                   <ion-button (click)="toERProfile(d.id)">Errand Runner
                     <ion-icon slot="start" name="person"></ion-icon>
                   </ion-button>
-                    <ion-button (click)="toPayment(d.id)">Payment
+                    <ion-button (click)="toPayment()">Payment
                       <ion-icon slot="start" name="wallet"></ion-icon>
                   </ion-button>
                 </ion-col>
