--- a/src/app/payment-client/payment-client.page.html
+++ b/src/app/payment-client/payment-client.page.html
@@ -17,7 +17,7 @@
         <ion-row>
           <ion-col size="3">
             <ion-label>
-              Errand Runner: Amy
+              Errand Runner: {{name}}
             </ion-label>
           </ion-col>
         </ion-row>
@@ -75,7 +75,7 @@
           Commission to Conserv:
         </ion-col>
         <ion-col class="large" style="margin-right: 1pc;">
-          {{ job?.price * 0.1 }}
+          {{ job?.price * 0.107 | currency }}
         </ion-col>
       </ion-row>
 
@@ -84,7 +84,7 @@
           TOTAL
         </ion-col>
         <ion-col class="largetotal" style="margin-right: 1pc;">
-          {{ job?.price + commissionRate }}
+          {{ job?.price + job?.price * 0.107 | currency }}
         </ion-col>
       </ion-row>
   </ion-grid>
