--- a/src/app/payment-client/payment-client.page.html
+++ b/src/app/payment-client/payment-client.page.html
@@ -24,7 +24,7 @@
         <ion-row>
           <ion-col size="3">
             <ion-label>
-              Errand Name: <p>{{ job?.errandname }}</p>
+              Errand name: <p>{{ job?.errandname }}</p>
             </ion-label>
           </ion-col>
           <ion-col>
