--- a/src/app/eroverdue/eroverdue.page.html
+++ b/src/app/eroverdue/eroverdue.page.html
@@ -63,7 +63,7 @@
     </ion-grid>
 
     <ion-grid *ngSwitchCase="'ERCompleted'">
-      <div *ngIf="jobsCompleted?.length === 0" class="center">
+      <div *ngIf="jobsCompleted?.length === 0 && jobsCompletedNP?.length === 0" class="center">
         <h5 class="center-content"> You have not completed any errands</h5>
       </div>
       <ion-card *ngFor="let item of jobsCompleted">
@@ -74,7 +74,51 @@
                 <ion-icon size="large" class="center-right" name="briefcase" color="medium"></ion-icon>
               </ion-thumbnail>
             </ion-col>
+            <ion-col style="margin: auto;">
+              <ion-row>
+                <ion-card-title>{{item?.errandname}}</ion-card-title>
+              </ion-row>
+              <ion-row>
+                <ion-card-subtitle>Errand Category: {{item?.category}} </ion-card-subtitle>
+              </ion-row>
+            </ion-col>
+            <ion-col class="align-end">
+              <ion-button (click)="toClient(item.client)">Client Profile
+              </ion-button>
+              <ion-button (click)="toReceive()">Receive Payment
+              </ion-button>
+            </ion-col>
+          </ion-row>
+        </ion-card-header>
+
+        <ion-card-content>
+          <ion-row>
+            <ion-col size="0.5">
+            </ion-col>
             <ion-col>
+              <ion-label>
+                <div text-wrap>
+                  <p>Client: {{ item?.client }}</p>
+                  <p>Errand Price: {{ item?.price | currency }}</p>
+                  <p>Errand Meeting Time: {{item?.date | date:'d MMM yyyy'}}, {{item?.time | date:'shortTime'}}</p>
+                  <p>Estimated Ending Time: {{item?.endtime | date:'shortTime'}}</p>
+                  <p>Errand Description: {{ item?.description }}</p>
+                </div>
+              </ion-label>
+            </ion-col>
+          </ion-row>
+        </ion-card-content>
+      </ion-card>
+
+      <ion-card *ngFor="let item of jobsCompletedNP">
+        <ion-card-header>
+          <ion-row>
+            <ion-col size="0.5">
+              <ion-thumbnail text-wrap>
+                <ion-icon size="large" class="center-right" name="briefcase" color="medium"></ion-icon>
+              </ion-thumbnail>
+            </ion-col>
+            <ion-col style="margin: auto;">
               <ion-row>
                 <ion-card-title>{{item?.errandname}}</ion-card-title>
               </ion-row>
@@ -105,8 +149,6 @@
               </ion-label>
             </ion-col>
           </ion-row>
-            <ion-button style="width: 97%; margin: auto; font-size: 15px; height: 3pc; margin-top: 1pc; margin-bottom: 1pc;" size="default" expand="block" (click)="toReceive()">Receive Payment
-            </ion-button>
         </ion-card-content>
       </ion-card>
     </ion-grid>
