--- a/src/app/confirm-payment/confirm-payment.page.html
+++ b/src/app/confirm-payment/confirm-payment.page.html
@@ -17,7 +17,7 @@
     <ion-row>
       <ion-col>
           <ion-label>
-            Name: Ben 
+            Name: {{user.name}}
           </ion-label>
       </ion-col>
     </ion-row>
@@ -25,7 +25,7 @@
     <ion-row>
       <ion-col>
           <ion-label>
-            Email: ben@gmail.com 
+            Email: {{user.email}}
           </ion-label>
       </ion-col>
     </ion-row>
@@ -33,7 +33,7 @@
     <ion-row>
       <ion-col>
           <ion-label>
-            Phone Number: +65 91234567 
+            Phone Number: {{user.phoneno}}
           </ion-label>
       </ion-col>
     </ion-row>
