--- a/src/app/eroverdue/eroverdue.page.html
+++ b/src/app/eroverdue/eroverdue.page.html
@@ -85,7 +85,7 @@
             <ion-col class="align-end">
               <ion-button (click)="toClient(item.client)">Client Profile
               </ion-button>
-              <ion-button (click)="toReceive()">Receive Payment
+              <ion-button (click)="toReceive(item.id)">Receive Payment
               </ion-button>
             </ion-col>
           </ion-row>
