--- a/src/app/paynow/paynow.page.html
+++ b/src/app/paynow/paynow.page.html
@@ -17,7 +17,7 @@
     <ion-row>
       <ion-col>
           <ion-label>
-            Name: Amy 
+            Name: {{user.name}}
           </ion-label>
       </ion-col>
     </ion-row>
@@ -25,7 +25,7 @@
     <ion-row>
       <ion-col>
           <ion-label>
-            Phone Number: +65 91234567
+            Phone Number: {{user.phoneno}}
           </ion-label>
       </ion-col>
     </ion-row>
