--- a/src/app/receivepayment/receivepayment.page.html
+++ b/src/app/receivepayment/receivepayment.page.html
@@ -17,7 +17,7 @@
     <ion-row>
       <ion-col>
           <ion-label>
-            Name: Amy 
+            Name: {{user.name}}
           </ion-label>
       </ion-col>
     </ion-row>
@@ -25,7 +25,7 @@
     <ion-row>
       <ion-col>
           <ion-label>
-            Email: amy@gmail.com 
+            Email: {{user.email}}
           </ion-label>
       </ion-col>
     </ion-row>
@@ -33,7 +33,7 @@
     <ion-row>
       <ion-col>
           <ion-label>
-            Phone Number: +65 91234567
+            Phone Number: {{user.phoneno}}
           </ion-label>
       </ion-col>
     </ion-row>
@@ -42,17 +42,28 @@
       <ion-card-header>
         <ion-card-title class="title">Receive Payment by:</ion-card-title>
       </ion-card-header>
-      <ion-grid>
-        <ion-row>
-          <ion-col>
-            <ion-button size="medium" expand="block" color="primary" (click)=paynow()>PayNow</ion-button>
-          </ion-col>
-          <ion-col>
-            <ion-button size="medium" expand="block" color="primary" (click)=carddetails()>Card</ion-button>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
+      <ion-card-content style="color: black;">
+        <ion-grid>
+          <ion-row>
+            <ion-label>
+              Client: {{client.name}}
+            </ion-label>
+          </ion-row>
+          <ion-row>
+            <ion-label>
+              Payment Type: {{newbill.paymenttype}}
+            </ion-label>
+          </ion-row>
+          <ion-row>
+            <ion-label>
+              Amount Paid: {{newbill.fullamt | currency}}
+            </ion-label>
+          </ion-row>
+        </ion-grid>
+      </ion-card-content>
     </ion-card>
+
+    <ion-button expand="block" (click)='payment()'>Receive Payment</ion-button>
   </ion-grid>
 
 </ion-content>
