--- a/src/app/carddetails/carddetails.page.html
+++ b/src/app/carddetails/carddetails.page.html
@@ -6,14 +6,31 @@
 
 <ion-content>
   <ion-grid>
-    <form > 
+    <form [formGroup]="CardNoForm"> 
+      <ion-row>
+        <ion-col>
+          <ion-item lines="none" style="overflow: visible;">
+            <ion-label class="google-label" position="floating">
+              Card Type
+            </ion-label>
+            <select formControlName="cardType" class="form-control">
+              <option [value]="cardType" *ngFor="let cardType of creditCardTypes">
+                {{cardType}}
+              </option>
+            </select>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </form>
+
+    <form [formGroup]="CardDetailsForm">
       <ion-row>
         <ion-col>
           <ion-item lines="none" style="overflow: visible;">
             <ion-label class="google-label" position="floating">
               Card No
             </ion-label>
-            <ion-input class="google-input" type="text"></ion-input>
+            <ion-input formControlName="creditCard" class="google-input" type="text"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -33,7 +50,7 @@
               <ion-label class="google-label" position="floating">
                 Security Code
               </ion-label>
-              <ion-input class="google-input" type="password"></ion-input>
+              <ion-input formControlName="securityCode" class="google-input" type="password"></ion-input>
           </ion-item>
         </ion-col>
        </ion-row>
