--- a/src/app/carddetails/carddetails.page.scss
+++ b/src/app/carddetails/carddetails.page.scss
@@ -21,3 +21,17 @@ ion-label.google-label {
     -webkit-border-radius: 5px;
 }
 
+input.ng-invalid{
+    background-color:#DA5235;
+    color:white;
+  }
+
+ select.ng-invalid{
+    background-color:#DA5235;
+    color:white;
+  }
+  
+  .fade.show {
+    opacity: 1;
+}
+
