--- a/src/app/payment-errandrunner/payment-errandrunner.page.html
+++ b/src/app/payment-errandrunner/payment-errandrunner.page.html
@@ -84,7 +84,7 @@
           TOTAL
         </ion-col>
         <ion-col class="largetotal" style="margin-right: 1pc;">
-          {{ job?.price + job?.price * 0.07 | currency }}
+          {{ job?.price - job?.price * 0.07 | currency }}
         </ion-col>
       </ion-row>
   </ion-grid>
