--- a/src/app/carddetails/carddetails.page.html
+++ b/src/app/carddetails/carddetails.page.html
@@ -6,14 +6,14 @@
 
 <ion-content>
   <ion-grid>
-    <form> 
+    <form [formGroup]="CardNoForm"> 
       <ion-row>
         <ion-col>
           <ion-item lines="none" style="overflow: visible;">
             <ion-label class="google-label" position="floating">
               Card Type
             </ion-label>
-            <select class="form-control">
+            <select formControlName="cardType" class="form-control">
               <option [value]="cardType" *ngFor="let cardType of creditCardTypes">
                 {{cardType}}
               </option>
@@ -28,7 +28,7 @@
             <ion-label class="google-label" position="floating">
               Card No
             </ion-label>
-            <ion-input class="google-input" type="text"></ion-input>
+            <ion-input formControlName="creditCard" class="google-input" type="text"></ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
@@ -36,10 +36,40 @@
       <ion-row>
         <ion-col>
           <ion-item lines="none" style="overflow: visible;">
-            <ion-label class="google-label" position="floating">
-              Valid thru
-            </ion-label>
-            <ion-input class="google-input" type="text"></ion-input>
+            <<ion-label class="google-label" position="floating"> Valid thru (MM/YY) </ion-label>
+            <select id="expiryMonth">
+                <option selected> Month </option>
+                <option>01</option>
+                <option>02</option>
+                <option>03</option>
+                <option>04</option>
+                <option>05</option>
+                <option>06</option>
+                <option>07</option>
+                <option>08</option>
+                <option>09</option>
+                <option>10</option>
+                <option>11</option>
+                <option>12</option>
+            </select>
+            <select id="expiryYear">
+                <option selected>Year</option>
+                <option>2018</option>
+                <option>2019</option>
+                <option>2020</option>
+                <option>2021</option>
+                <option>2022</option>
+                <option>2023</option>
+                <option>2024</option>
+                <option>2025</option>
+                <option>2026</option>
+                <option>2027</option>
+                <option>2028</option>
+                <option>2029</option>
+                <option>2030</option>
+            </select>
+            <span id="expiryMonthError"> </span>
+            <span id="expiryYearError"> </span>
           </ion-item>
         </ion-col>
 
@@ -48,7 +78,7 @@
               <ion-label class="google-label" position="floating">
                 Security Code
               </ion-label>
-              <ion-input class="google-input" type="password"></ion-input>
+              <ion-input formControlName="securityCode" class="google-input" type="password"></ion-input>
           </ion-item>
         </ion-col>
        </ion-row>
