--- a/src/app/carddetails/carddetails.page.html
+++ b/src/app/carddetails/carddetails.page.html
@@ -36,10 +36,40 @@
       <ion-row>
         <ion-col>
           <ion-item lines="none" style="overflow: visible;">
-            <ion-label class="google-label" position="floating">
-              Valid thru
-            </ion-label>
-            <ion-input class="google-input" type="text"></ion-input>
+            <<ion-label class="google-label" position="floating"> Valid thru (MM/YY) </ion-label>
+            <select id="expiryMonth">
+                <option selected> Month </option>
+                <option>01</option>
+                <option>02</option>
+                <option>03</option>
+                <option>04</option>
+                <option>05</option>
+                <option>06</option>
+                <option>07</option>
+                <option>08</option>
+                <option>09</option>
+                <option>10</option>
+                <option>11</option>
+                <option>12</option>
+            </select>
+            <select id="expiryYear">
+                <option selected>Year</option>
+                <option>2018</option>
+                <option>2019</option>
+                <option>2020</option>
+                <option>2021</option>
+                <option>2022</option>
+                <option>2023</option>
+                <option>2024</option>
+                <option>2025</option>
+                <option>2026</option>
+                <option>2027</option>
+                <option>2028</option>
+                <option>2029</option>
+                <option>2030</option>
+            </select>
+            <span id="expiryMonthError"> </span>
+            <span id="expiryYearError"> </span>
           </ion-item>
         </ion-col>
 
