--- a/src/app/carddetails/carddetails.page.html
+++ b/src/app/carddetails/carddetails.page.html
@@ -36,7 +36,7 @@
       <ion-row>
         <ion-col>
           <ion-item lines="none" style="overflow: visible;">
-            <<ion-label class="google-label" position="floating"> Valid thru (MM/YY) </ion-label>
+            <ion-label class="google-label" position="floating"> Valid thru (MM/YY) </ion-label>
             <select id="expiryMonth">
                 <option selected> Month </option>
                 <option>01</option>
