--- a/src/app/payment-client/payment-client.page.html
+++ b/src/app/payment-client/payment-client.page.html
@@ -17,7 +17,7 @@
         <ion-row>
           <ion-col size="3">
             <ion-label>
-              Errand Runner: {{applicant}
+              Errand Runner: {{name}}
             </ion-label>
           </ion-col>
         </ion-row>
