--- a/src/app/carddetails/carddetails.page.html
+++ b/src/app/carddetails/carddetails.page.html
@@ -10,7 +10,7 @@
       <ion-row>
         <ion-col>
           <ion-item lines="none" style="overflow: visible;">
-            <ion-label class="google-label" position="floating">
+            <ion-label>
               Card Type
             </ion-label>
             <select class="form-control">
@@ -36,7 +36,7 @@
       <ion-row>
         <ion-col>
           <ion-item lines="none" style="overflow: visible;">
-            <ion-label class="google-label" position="floating"> Valid thru (MM/YY) </ion-label>
+            <ion-label> Valid thru (MM/YY) </ion-label>
             <select id="expiryMonth">
                 <option selected> Month </option>
                 <option>01</option>
