--- a/src/app/carddetails/carddetails.page.html
+++ b/src/app/carddetails/carddetails.page.html
@@ -38,7 +38,7 @@
       <ion-row>
         <ion-col>
           <ion-item lines="none" style="overflow: visible;">
-            <ion-label class="google-label" position="floating"> Valid thru (MM/YY) </ion-label>
+            <ion-label> Valid thru (MM/YY) </ion-label>
             <select formControlName="expiryDate" id="expiryMonth">
                 <option selected> MM </option>
                 <option>01</option>
@@ -86,7 +86,6 @@
        </ion-row>
     </form>
   </ion-grid>
-
 
   <ion-button expand="block" size="medium" style="margin:1pc;" (click)="confirm()">Confirm</ion-button>
 
